Fix images wrap

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 
 .section-two, .section-three {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -22,6 +23,7 @@ body {
     gap: 30px;
     margin-bottom: 100px;
 }
+
 
 .section-three {
     background-color: #E5E7EB;
@@ -70,6 +72,12 @@ ul {
     flex-direction: row;
     list-style: none;
     gap: 30px;
+   
+}
+
+ul.wrap {
+     margin: 100px;
+    flex-wrap: wrap;
 }
 
 .container-one {
@@ -175,3 +183,4 @@ button {
     font-size: 24px;
     font-weight: 600;
 }
+
